<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="google.helloworldapplication.MainActivity"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:text="@string/red"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:text="@string/green"
            android:background="#00FF00"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:text="@string/blue"
            android:background="#0000FF"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:text="@string/yellow"
            android:background="#FFFF00"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row1"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row2"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row3"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row4"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
