<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="#FFFFFF"
        android:text="@string/type_here"/>
    <EditText
        android:id="@+id/editText"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/textView"/>
    <Button
        android:layout_alignParentRight="true"
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/ok"
        android:layout_below="@id/editText" />
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/cancel"
        android:layout_below="@+id/editText"
        android:layout_toLeftOf="@id/buttonOk"/>

</RelativeLayout>